# streamer

./: Cargo.toml
client/: Cargo.toml  flake.nix
client/src/: app.rs  display.rs  lib.rs  stream.rs
server/: Cargo.toml  flake.nix
server/src/: stream.rs
shared/: Cargo.toml  flake.nix
shared/src/: codes.rs  emulator.rs  lib.rs  scan_codes.rs
src/: codes.rs
