[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = {version = "*", features = ["serde"] }
env_logger = "*"
enigo = {version = "*", features = ["serde"] }
ringbuf = "*"
# wgpu = "*" 
log = "*"
softbuffer = "0.4"
serde = { version = "*", features = ["derive"] }
bincode = "1.3"
cpal = {version = "*", features = ["jack"]}
bytemuck = "*"
shared = {path = "../shared/" }
