[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = {version = "*", features = ["serde"]}
env_logger = "*"
enigo = {version = "*", features = ["serde"] }
winput = {version = "*"}
log = "*"
serde = { version = "*", features = ["derive"] }
bincode = "1.3"
shared = {path = "../shared/" }
