[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = {version = "*", features = ["serde"]}
simplelog = "*"
env_logger = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
bincode = "1.3"
shared = {path = "../shared/" }
tokio = { version = "1", features = ["net", "macros"] }
ringbuf = "*"
bytemuck = "*"

[target.'cfg(windows)'.dependencies]
winput = {version = "*"}
wasapi = "*"
