[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
winit = {version = "*", features = ["serde"]}
simplelog = "*"
env_logger = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
bincode = "1.3"
shared = {path = "../shared/" }
tokio = { version = "*", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util"] }
ddc-hi = "*"
ringbuf = "*"
bytemuck = "*"
cpal = "*"

[target.'cfg(windows)'.dependencies]
winput = {version = "*"}
wasapi = "*"
