[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = {version = "*", features = ["serde"] }
env_logger = "*"
enigo = {version = "*", features = ["serde"] }
log = "*"
serde = { version = "*", features = ["derive"] }
bincode = "1.3"
hidapi = "*"
tokio = { version = "*", features = ["rt-multi-thread", "sync", "macros", "time",] }

[target.'cfg(windows)'.dependencies]
winput = {version = "*" }
hidapi = {version = "*", features = ["windows-native"] }
